# app/Http/Controllers/UserController.php
@@ -1,0 +1,54 @@
+<?php
+
+namespace App\Http\Controllers;
+
+use App\Services\UserService;
+use App\Http\Controllers\Controller;
+use Illuminate\Support\Facades\Validator;
+use Illuminate\Http\Request;
+
+class UserController extends Controller
+{
+    private $service;
+
+    public function __construct(UserService $service)
+    {
+        $this->service = $service;
+    }
+
+    /**
+     * @OA\Get(
+     *      tags={"Users"},
+     *      description="Display a list of records.",
+     *      path="/users",
+     *      security={{"bearerAuth":{}}},
+     *      @OA\Parameter(
+     *          name="search",
+     *          description="search for the record by name/register/email/cpf/id",
+     *          required=false,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *       ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     * )
+     * @param  \Illuminate\Http\Request  $request
+     * @return \Illuminate\Http\Response|\Illuminate\Support\Collection
+     */
+    public function getItems(Request $request)
+    {
+        return $this->service->getItems($request->all());
+    }
+}
