# storage/api-docs/api-docs.json
@@ -42,6 +42,42 @@
                     }
                 }
             }
+        },
+        "/users": {
+            "get": {
+                "tags": [
+                    "Users"
+                ],
+                "description": "Display a list of records.",
+                "operationId": "eec78796f0de42c9cbf2ee0be2680993",
+                "parameters": [
+                    {
+                        "name": "search",
+                        "in": "query",
+                        "description": "search for the record by name/register/email/cpf/id",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
         }
     }
 }
